# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yaml  tests.yaml
gendiff/: __init__.py  cli.py  diff.py  reader.py
gendiff/formatters/: formatter.py  json_formatter.py  plain.py  plain_formatter.py  stylish.py  stylish_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_formatters.py  test_gendiff.py  test_json.py  test_plain.py  test_reader.py  test_stylish.py
tests/fixtures/: diff_1_2.txt  diff_3_4.txt  json_formatter.txt  objects.py  out_1_2.txt
