[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet second project - Difference Calculator"
classifiers = [
	"Environment :: Console",
    "Programming Language :: Python :: 3.10",
]
authors = ["Dmitry <di.mesler.2010@yandex.ru>"]
readme = "README.md"
packages = [
	{ include = "gendiff" },
]
repository = "https://github.com/Pryanik0071/python-project-50"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"